# attractor-desk-alpha

./: .gitignore  AGENTS.md  API_KEY.txt  API_KEY.txt.example  ARCHITECTURE.md  CHATVIEWMODEL_REFACTORING_PLAN.md  CLAUDE.md  CODE_REVIEW.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  README.md  VIEWMODEL_REFACTORING_PLAN.md  pyproject.toml  report.md  reproduce_issue.py  requirements.txt  test_settings_persistence.py
.open_canvas/: database.db
Documentation/: CHATVIEWMODEL_REFACTORING_PLAN.md  MIGRATION_NOTES.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  RAG_DOC.md  ideias.md  qa-analysis-2026-01-12_06-56.md  qa-bugs-2026-01-14_03-04.md
Documentation/architecture/: langgraph-open-canvas.md
Documentation/attractor_desk_Reference/: __init__.py  main.py
core/: __init__.py  config.py  constants.py  models.py  tracing.py  types.py
core/graphs/: __init__.py
core/infrastructure/: __init__.py  (+1 more)
openspec/: project.md
tests/: conftest.py  test_artifact_ops.py  test_artifacts.py  test_chromadb_integration.py  test_chunking.py  test_config_tracing.py  test_image_processing_node.py  test_keyring_service.py  test_memory_store.py  test_openrouter_utils.py  test_pdf_watcher_service.py  test_persistence.py  test_providers_search.py  test_rag_nodes_state.py  test_rag_pipeline.py  test_rag_repository.py  test_rag_service.py  test_reflect_node.py  test_settings_repository.py  test_settings_viewmodel_bounds.py  test_utils_helpers.py  test_viewmodels.py
ui/: __init__.py  main.py  main_window.py  styles.py
(+227 files in other folders)
